[gd_scene load_steps=18 format=2]

[ext_resource path="res://prefab/Input Panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Pitch Control.gd" type="Script" id=2]
[ext_resource path="res://Images/UpArrow.png" type="Texture" id=3]
[ext_resource path="res://script/Volume Control.gd" type="Script" id=4]
[ext_resource path="res://Images/Speaker-0.svg" type="Texture" id=5]
[ext_resource path="res://Images/Speaker-1.svg" type="Texture" id=6]
[ext_resource path="res://Images/Speaker-2.svg" type="Texture" id=7]
[ext_resource path="res://Images/Speaker-3.svg" type="Texture" id=8]
[ext_resource path="res://Images/circle-background2.png" type="Texture" id=9]
[ext_resource path="res://script/AudioManager.gd" type="Script" id=10]
[ext_resource path="res://prefab/Key.tscn" type="PackedScene" id=11]
[ext_resource path="res://Images/A.png" type="Texture" id=12]
[ext_resource path="res://Images/B.png" type="Texture" id=13]
[ext_resource path="res://Images/C.png" type="Texture" id=14]
[ext_resource path="res://Images/D.png" type="Texture" id=15]
[ext_resource path="res://Images/E.png" type="Texture" id=16]
[ext_resource path="res://Images/F.png" type="Texture" id=17]

[node name="Root Node" type="Node2D"]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 604.0
custom_constants/separation = -3

[node name="Musical Container" type="PanelContainer" parent="HBoxContainer"]
margin_right = 230.0
margin_bottom = 604.0
rect_min_size = Vector2( 230, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Musical Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 223.0
margin_bottom = 597.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="Input Panel" type="VBoxContainer" parent="HBoxContainer/Musical Container/VBoxContainer"]
margin_right = 216.0
margin_bottom = 260.0

[node name="W Input Panel" parent="HBoxContainer/Musical Container/VBoxContainer/Input Panel" instance=ExtResource( 1 )]
editor/display_folded = true

[node name="A Input Panel2" parent="HBoxContainer/Musical Container/VBoxContainer/Input Panel" instance=ExtResource( 1 )]
margin_top = 44.0
margin_bottom = 84.0
input_key = "A"
note_selected = 1

[node name="S Input Panel3" parent="HBoxContainer/Musical Container/VBoxContainer/Input Panel" instance=ExtResource( 1 )]
margin_top = 88.0
margin_bottom = 128.0
input_key = "S"
note_selected = 2

[node name="D Input Panel4" parent="HBoxContainer/Musical Container/VBoxContainer/Input Panel" instance=ExtResource( 1 )]
margin_top = 132.0
margin_bottom = 172.0
input_key = "D"
note_selected = 3

[node name="F Input Panel5" parent="HBoxContainer/Musical Container/VBoxContainer/Input Panel" instance=ExtResource( 1 )]
margin_top = 176.0
margin_bottom = 216.0
input_key = "F"
note_selected = 4

[node name="G Input Panel6" parent="HBoxContainer/Musical Container/VBoxContainer/Input Panel" instance=ExtResource( 1 )]
margin_top = 220.0
margin_bottom = 260.0
input_key = "G"
note_selected = 5

[node name="Pitch Panel" type="Panel" parent="HBoxContainer/Musical Container/VBoxContainer"]
margin_top = 265.0
margin_right = 216.0
margin_bottom = 590.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel"]
margin_top = 10.0
margin_right = 214.0
margin_bottom = 193.0
custom_constants/separation = 20

[node name="Pitch Container" type="HBoxContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer"]
editor/display_folded = true
margin_right = 214.0
margin_bottom = 75.0
size_flags_horizontal = 3
script = ExtResource( 2 )
pitch_shift_label_ref = NodePath("../Pitch Container/MarginContainer/VBoxContainer/pitch_shift")
pitch_shift_slider_ref = NodePath("../Pitch Container/MarginContainer/VBoxContainer/pitch_shift_slider")
pitch_label_ref = NodePath("../Pitch Container/MarginContainer/VBoxContainer/pitch_label")
pitch_slider_ref = NodePath("../Pitch Container/MarginContainer/VBoxContainer/pitch_slider")
audio_manager_ref = NodePath("../../../../../PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container"]
editor/display_folded = true
margin_right = 60.0
margin_bottom = 75.0
rect_min_size = Vector2( 60, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/CenterContainer"]
margin_left = 20.0
margin_top = 27.0
margin_right = 40.0
margin_bottom = 47.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container"]
margin_left = 64.0
margin_right = 214.0
margin_bottom = 75.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer"]
margin_right = 120.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="pitch_shift" type="Label" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "Pitch Shift:"

[node name="pitch_shift_slider" type="HSlider" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 120.0
margin_bottom = 35.0
max_value = 0.5
step = 0.005
value = 0.005
ticks_on_borders = true

[node name="pitch_label" type="Label" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 54.0
text = "Pitch"

[node name="pitch_slider" type="HSlider" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 120.0
margin_bottom = 75.0
max_value = 2.0
step = 0.05
value = 1.0
ticks_on_borders = true

[node name="Volume Container" type="HBoxContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer"]
editor/display_folded = true
margin_top = 95.0
margin_right = 214.0
margin_bottom = 130.0
size_flags_horizontal = 3
script = ExtResource( 4 )
volume0 = ExtResource( 5 )
volume1 = ExtResource( 6 )
volume2 = ExtResource( 7 )
volume3 = ExtResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container"]
margin_right = 60.0
margin_bottom = 35.0
rect_min_size = Vector2( 60, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container/CenterContainer"]
margin_left = 15.0
margin_top = 2.0
margin_right = 45.0
margin_bottom = 32.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container"]
margin_left = 64.0
margin_right = 214.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container/MarginContainer"]
margin_right = 120.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container/MarginContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
text = "Volume:"

[node name="HSlider" type="HSlider" parent="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container/MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 120.0
margin_bottom = 35.0
ticks_on_borders = true

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 227.0
margin_right = 807.0
margin_bottom = 604.0
rect_min_size = Vector2( 580, 600 )

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/PanelContainer2"]
editor/display_folded = true
margin_left = 7.0
margin_top = 7.0
margin_right = 573.0
margin_bottom = 597.0
tab_align = 0

[node name="Cello" type="Tabs" parent="HBoxContainer/PanelContainer2/TabContainer"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PanelContainer2/TabContainer/Cello"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -2.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer"]
editor/display_folded = true
margin_left = 8.0
margin_top = 5.0
margin_right = 558.0
margin_bottom = 555.0
rect_min_size = Vector2( 550, 550 )

[node name="Circle Background" type="Sprite" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel"]
position = Vector2( 275, 275 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 9 )

[node name="Center" type="Node2D" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background"]
scale = Vector2( 1.11111, 1.11111 )
script = ExtResource( 10 )

[node name="W Key" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center" instance=ExtResource( 11 )]
position = Vector2( 110, -191 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 12 )

[node name="A Key" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center" instance=ExtResource( 11 )]
position = Vector2( -110, -191 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
key = 2

[node name="S Key" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center" instance=ExtResource( 11 )]
position = Vector2( -220, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 14 )
key = 3

[node name="D Key" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center" instance=ExtResource( 11 )]
position = Vector2( -110, 191 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 15 )
key = 4

[node name="F Key" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center" instance=ExtResource( 11 )]
position = Vector2( 110, 191 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 16 )
key = 5

[node name="G Key" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center" instance=ExtResource( 11 )]
position = Vector2( 220, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 17 )
key = 6

[node name="Timer" type="Timer" parent="HBoxContainer/PanelContainer2/TabContainer/Cello/CenterContainer/Panel/Circle Background/Center"]

[node name="Drum" type="Tabs" parent="HBoxContainer/PanelContainer2/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Visual Container" type="PanelContainer" parent="HBoxContainer"]
visible = false
margin_left = 230.0
margin_right = 830.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )

[node name="Panel" type="Panel" parent="HBoxContainer/Visual Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 593.0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 804.0
margin_right = 1012.41
margin_bottom = 604.0
rect_min_size = Vector2( 208.41, 0 )

[node name="Panel" type="Panel" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 201.41
margin_bottom = 597.0

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 1009.0
margin_right = 1009.0
margin_bottom = 604.0
[connection signal="value_changed" from="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer/VBoxContainer/pitch_shift_slider" to="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container" method="_on_pitch_shift_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container/MarginContainer/VBoxContainer/pitch_slider" to="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Pitch Container" method="_on_pitch_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container/MarginContainer/VBoxContainer/HSlider" to="HBoxContainer/Musical Container/VBoxContainer/Pitch Panel/VBoxContainer/Volume Container" method="_on_HSlider_value_changed"]
